--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,13 +35,16 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'RelevantStudy Thinker Image' }}
 
   ><Fragment slot="title">
-    Composition Computing + Composition AI with Composition Organizations
-      </Fragment>
+    
+      Relevant Study
+      
+    study what is relevant. 
+    </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">Study What is relevant</span> to you. </span>
-      Providing Technology Insight，Innovation, Development，Research, Buiding Software Prototypes and Products.
+        <span class="font-semibold"></span> to you. </span>
+      Building Composition Computing + Composition AI through Organization Composition. Technology Insight，Tech and Business Innovation, Research & Development，Prototypes and Products.
     </Fragment>
   </Hero>
 
