--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,14 +36,10 @@ const metadata = {
 
   ><Fragment slot="title">
     
-      Relevant Study
-      
-    study what is relevant. 
+      Relevant Study, study what matters
     </Fragment>
 
     <Fragment slot="subtitle">
-      <span class="hidden sm:inline">
-        <span class="font-semibold"></span> to you. </span>
       Building Composition Computing + Composition AI through Organization Composition. Technology Insight，Tech and Business Innovation, Research & Development，Prototypes and Products.
     </Fragment>
   </Hero>
