--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -14,7 +14,7 @@ import Brands from '~/components/widgets/Brands.astro';
 import { YouTube } from 'astro-embed';
 
 const metadata = {
-  title: 'Startup Landing Page',
+  title: 'MoFA Search',
 };
 ---
 
@@ -22,7 +22,8 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Startup Web Demo"
+    tagline="GOSIM Super Agent Hackathon Series
+    "
     actions={[
       {
         variant: 'primary',
