--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -22,8 +22,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="GOSIM Super Agent Hackathon Series
-    "
+    tagline="GOSIM Super Agent Hackathon Series"
     actions={[
       {
         variant: 'primary',
