--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -22,7 +22,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="GOSIM Super Agent Hackathon Series"
+    tagline="A GOSIM Super Agent Hackathon"
     actions={[
       {
         variant: 'primary',
