--- a/src/pages/hackathons/mofa-voice.astro
+++ b/src/pages/hackathons/mofa-voice.astro
@@ -14,15 +14,15 @@ const metadata = {
 
   <Hero2
     tagline="A GOSIM Super Agent Hacakthon"
-    title="Long-form Sales: Sell with a Story: The Long-form Way!"
-    subtitle="Dive deep into crafting a Landing Page that narrates, persuades, and converts."
+    title="MoFA Voice: Building Conversational AI"
+    subtitle="with fastest TTS engine, and most composable Agent Framework"
     actions={[
       { variant: 'primary', text: 'Call to Action', href: '#', icon: 'tabler:square-rounded-arrow-right' },
       { text: 'Learn more', href: '#' },
     ]}
     image={{
       src: 'https://images.unsplash.com/photo-1621452773781-0f992fd1f5cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1626&q=80',
-      alt: 'Children telling a story. Long-form Sales Landing Page demo',
+      alt: 'Conversational AI',
     }}
   />
 
