--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const metadata = {
       },
       { text: 'Learn more', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/human-brain-fire-image.png', alt: 'RelevantStudy Thinker Image' }}
+    image={{ src: '~/assets/images/human-brain-fire-image.png', alt: 'RelevantStudy Thinker' }}
 
   ><Fragment slot="title">
     
@@ -53,41 +53,41 @@ const metadata = {
   <Features
     id="features"
     tagline="Features"
-    title="What you get with AstroWind"
-    subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022, 2023 and 2024."
+    title="What you get with RelevantStudy"
+    subtitle="Stay Relevant to your business, Help you to address your uncertainty and challenges"
     items={[
       {
-        title: 'Astro + Tailwind CSS Integration',
+        title: 'Quick Analysis',
         description:
           'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
         icon: 'tabler:brand-tailwind',
       },
       {
-        title: 'Ready-to-use Components',
+        title: 'Insight Study',
         description:
           'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
         icon: 'tabler:components',
       },
       {
-        title: 'Best Practices',
+        title: 'Fast PoC',
         description:
           'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
         icon: 'tabler:list-check',
       },
       {
-        title: 'Excellent Page Speed',
+        title: 'Open Source Project Development',
         description:
           'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
         icon: 'tabler:rocket',
       },
       {
-        title: 'Search Engine Optimization (SEO)',
+        title: 'AI Application Development',
         description:
           "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
         icon: 'tabler:arrows-right-left',
       },
       {
-        title: 'Open to new ideas and contributions',
+        title: 'Hackathon Organization',
         description:
           'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
         icon: 'tabler:bulb',
@@ -99,23 +99,23 @@ const metadata = {
 
   <Content
     isReversed
-    tagline="Inside template"
-    title="AstroWind's Blueprint: Fun Meets Functionality!"
+    tagline="Inside Relevant Study"
+    title="Compositions: Empower Extra-ordinary!"
     items={[
       {
-        title: 'Built on top of Astro 5.0',
+        title: 'Composition AI',
         description:
-          'Benefiting from the performance and developer-friendly features of this modern static site generator.',
+          'Making AI developer-friendly: making AI composable, modular, sustainable.',
       },
       {
-        title: 'Styled using Tailwind CSS',
+        title: 'Composition Computing',
         description:
-          'Facilitating rapid design and consistent styling with this highly popular utility-first CSS framework.',
+          'Unify the distributed, decentralized computing power, in the cloud, at the edge, to the devices',
       },
       {
-        title: 'Cross-browser compatibility',
+        title: 'Composition Organization',
         description:
-          'Ensure your website looks and functions consistently across various web browsers, delivering a seamless experience to all users.',
+          'Innovate the way of building things',
       },
     ]}
     image={{
@@ -139,23 +139,23 @@ const metadata = {
     isAfterContent
     items={[
       {
-        title: 'High level of customization',
+        title: 'Historical View',
         description: `Tailor the template effortlessly to match your brand's identity and requirements, making your website distinct and saving you time.`,
       },
       {
-        title: 'Multiple layout possibilities',
+        title: 'Stereo View',
         description:
           'Explore various layout options to find the structure that best presents your content, enhancing user engagement and navigation.',
       },
       {
-        title: 'Fully responsive design',
+        title: 'People-in-the-loop View',
         description:
           "Ensure your website's optimal performance on various devices and screen sizes, providing a consistent and enjoyable user experience.",
       },
       {
-        title: 'Integration of media',
+        title: 'factual and Systematic View',
         description:
-          'Seamlessly incorporate images, videos, and multimedia elements that enhance your content and engage visitors effectively.',
+          'Seek truth from facts',
       },
     ]}
     image={{
@@ -163,7 +163,7 @@ const metadata = {
       alt: 'Blueprint Image',
     }}
   >
-    <Fragment slot="content">Ensure your online presence truly represents you.</Fragment>
+    <Fragment slot="content">Principles behind our services.</Fragment>
 
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
@@ -177,22 +177,22 @@ const metadata = {
     isAfterContent
     items={[
       {
-        title: 'Enhanced user engagement',
+        title: 'Composition',
         description:
           'Captivate your audience with interactive elements, intuitive navigation, and visually appealing layouts, encouraging longer visits.',
       },
       {
-        title: 'Continuous improvement',
+        title: 'Decomposition',
         description:
           'Ensure your website stays aligned with the latest trends and technologies through regular updates and enhancements.',
       },
       {
-        title: 'Time and resource efficiency',
+        title: 'Incremental',
         description:
           'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with AstroWind.',
       },
       {
-        title: 'Community support',
+        title: 'Structural',
         description: `Join the growing AstroWind community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
       },
     ]}
@@ -201,7 +201,7 @@ const metadata = {
       alt: 'Astronauts Image',
     }}
   >
-    <Fragment slot="content">Designed to foster growth and success.</Fragment>
+    <Fragment slot="content">Our Methods</Fragment>
 
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
@@ -245,59 +245,43 @@ const metadata = {
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="Most used widgets"
-    subtitle="Provides frequently used components for building websites using Tailwind CSS"
-    tagline="Components"
+    title="Projects"
+    subtitle="What we are composing"
+    tagline="Cases"
     items={[
       {
-        title: 'Headers',
+        title: 'MoFA Framework',
         description: "Ever tried driving without GPS? Boom! That's why websites need headers for direction.",
         icon: 'flat-color-icons:template',
       },
       {
-        title: 'Heros',
+        title: 'MoFA Search',
         description:
           "Picture a superhero landing – epic, right? That's the job of a Hero section, making grand entrances!",
         icon: 'flat-color-icons:gallery',
       },
       {
-        title: 'Features',
+        title: 'MoFA Voice',
         description:
           'Where websites strut their stuff and show off superpowers. No holding back on the bragging rights here!',
         icon: 'flat-color-icons:approval',
       },
       {
-        title: 'Content',
+        title: 'MoFA ORA',
         description:
           "Dive into the meat and potatoes of a site; without it, you'd just be window shopping. Content is king.",
         icon: 'flat-color-icons:document',
       },
       {
-        title: 'Call-to-Action',
+        title: 'XLang',
         description:
           'That enthusiastic friend who\'s always urging, "Do it! Do it!"? Yeah, that\'s this button nudging you towards adventure.',
         icon: 'flat-color-icons:advertising',
       },
       {
-        title: 'Pricing',
+        title: 'CantorAI',
         description: 'Behold the dessert menu of the website world. Tempting choices await, can you resist?',
         icon: 'flat-color-icons:currency-exchange',
-      },
-      {
-        title: 'Testimonial',
-        description: 'Step into the gossip corner! Here, other visitors spill the beans and share the juicy details.',
-        icon: 'flat-color-icons:voice-presentation',
-      },
-      {
-        title: 'Contact',
-        description:
-          'Like a digital mailbox, but faster! Drop a line, ask a question, or send a virtual high-five. Ding! Message in.',
-        icon: 'flat-color-icons:business-contact',
-      },
-      {
-        title: 'Footers',
-        description: "The footer's like the credits of a movie but sprinkled with easter eggs. Time to hunt!",
-        icon: 'flat-color-icons:database',
       },
     ]}
   >
@@ -309,11 +293,8 @@ const metadata = {
   <!-- HighlightedPosts Widget ******* -->
 
   <BlogLatestPosts
-    title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
-                        Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
-                        Astro is a very interesting technology. Thanks.
-                `}
+    title="Find out more content in our RELEVANT Blog"
+    information={`We share our thoughts and study results here blog`}
   />
 
   <!-- FAQs Widget ******************* -->
