--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'Relevant Study LLC, Study What Matters',
   ignoreTitleTemplate: true,
 };
 ---
@@ -298,7 +298,7 @@ const metadata = {
   />
 
   <!-- FAQs Widget ******************* -->
-
+  <!--
   <FAQs
     title="Frequently Asked Questions"
     subtitle="Dive into the following questions to gain insights into the powerful features that AstroWind offers and how it can elevate your web development journey."
@@ -337,9 +337,9 @@ const metadata = {
       },
     ]}
   />
-
+  -->
   <!-- Stats Widget ****************** -->
-
+  <!--
   <Stats
     stats={[
       { title: 'Downloads', amount: '132K' },
@@ -348,9 +348,10 @@ const metadata = {
       { title: 'Users', amount: '48.4K' },
     ]}
   />
+  -->
 
   <!-- CallToAction Widget *********** -->
-
+  <!--
   <CallToAction
     actions={[
       {
@@ -362,6 +363,7 @@ const metadata = {
       },
     ]}
   >
+
     <Fragment slot="title">
       Astro&nbsp;+&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Tailwind CSS</span>
     </Fragment>
@@ -371,4 +373,5 @@ const metadata = {
       waste more time! :P
     </Fragment>
   </CallToAction>
+  -->  
 </Layout>
