--- a/src/pages/hackathons/mofa-ora.astro
+++ b/src/pages/hackathons/mofa-ora.astro
@@ -14,8 +14,8 @@ const metadata = {
 
   <Hero
     tagline="A GOSIM Super Agent Hackathon"
-    title="Renovate Red Alert Game with AI Agents"
-    subtitle="Renovation"
+    title="Red Alert"
+    subtitle="Renovate Red Alert Game with AI Agents"
     actions={[
       { variant: 'primary', text: 'Call to Action', href: '#', icon: 'tabler:square-rounded-arrow-right' },
       { text: 'Learn more', href: '#' },
