--- a/src/pages/hackathons/mofa-ora.astro
+++ b/src/pages/hackathons/mofa-ora.astro
@@ -14,14 +14,14 @@ const metadata = {
 
   <Hero
     tagline="A GOSIM Super Agent Hackathon"
-    title="Red Alert"
+    title="Red Alert - AI uprising"
     subtitle="Renovate Red Alert Game with AI Agents"
     actions={[
       { variant: 'primary', text: 'Call to Action', href: '#', icon: 'tabler:square-rounded-arrow-right' },
       { text: 'Learn more', href: '#' },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1597423498219-04418210827d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1674&q=80',
+      src: '~/assets/images/ora.jpg',
       alt: 'Magnet attracting screws. Lead generation landing page demo',
     }}
   />
