search info updated

--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -35,9 +35,8 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-      Improve <span class="hidden sm:inline">the online presence of</span> your <span
-        class="text-accent dark:text-white highlight">Startup</span
-      > with Astrowind templates
+       Distributed <span class="text-accent dark:text-white highlight">Composition Search</span
+      > Engine with MoFA 
     </Fragment>
 
     <Fragment slot="subtitle">
