--- a/src/pages/hackathons/mofa-ora.astro
+++ b/src/pages/hackathons/mofa-ora.astro
@@ -15,20 +15,20 @@ const metadata = {
   <Hero
     tagline="A GOSIM Super Agent Hackathon"
     title="Red Alert - AI uprising"
-    subtitle="Renovate Red Alert Game with AI Agents"
+    subtitle="Red Alert with AI Copilot: You Command, It Conquer"
     actions={[
       { variant: 'primary', text: 'Call to Action', href: '#', icon: 'tabler:square-rounded-arrow-right' },
       { text: 'Learn more', href: '#' },
     ]}
     image={{
       src: '~/assets/images/ora.jpg',
-      alt: 'Magnet attracting screws. Lead generation landing page demo',
+      alt: 'Open Ret Alert',
     }}
   />
 
   <CallToAction
     title="Coming soon"
-    subtitle="We are working on the content of these demo pages. You will see them very soon. Stay tuned Stay tuned!"
+    subtitle="We are working on the content of this Hackathon. You will see them very soon. Stay tuned Stay tuned!"
     actions={[
       {
         variant: 'primary',
