--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -45,7 +45,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="image">
-      <YouTube id="gxBkghlglTg" title="Astro just Launched.... Could it be the ultimate web framework?" />
+      <YouTube id="ZuN29OO1mb0" title="GOSIM Super Agent Hackathon" />
       <style is:inline>
         lite-youtube {
           margin: 0 auto;
