add ora-details page

--- a/src/pages/hackathons/mofa-ora.astro
+++ b/src/pages/hackathons/mofa-ora.astro
@@ -18,7 +18,7 @@ const metadata = {
     subtitle="Red Alert with AI Copilot: You Command, It Conquer"
     actions={[
       { variant: 'primary', text: 'Call to Action', href: '#', icon: 'tabler:square-rounded-arrow-right' },
-      { text: 'Learn more', href: '#' },
+      { text: 'Learn more', href: 'mofa-ora-detail' },
     ]}
     image={{
       src: '~/assets/images/ora.jpg',
