--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,6 +39,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
+    <b>Website Under Development</b> <br>
       Building Composition Computing + Composition AI through Organization Composition. Technology Insight，Tech and Business Innovation, Research & Development，Prototypes and Products.
     </Fragment>
   </Hero>
