--- a/src/pages/hackathons/mofa-voice-detail.astro
+++ b/src/pages/hackathons/mofa-voice-detail.astro
@@ -85,11 +85,6 @@ const metadata = {
   <!-- 1) Timeline with Steps widget ***** -->
   <Steps
     title="Hackathon Timeline"
-
-公布晋级复赛名单
-
-
-公布获奖名单，邮寄奖品
     items={[
       {
         title: '2025.02.21',
@@ -248,7 +243,7 @@ const metadata = {
   <Contact
     title="Stay Informed"
     subtitle="Join our mailing list for updates"
-    information="Subscribe to receive notifications about workshops, deadlines, and more."
+    // information="Subscribe to receive notifications about workshops, deadlines, and more."
     socials={[
       {
         icon: 'tabler:brand-twitter',
@@ -312,12 +307,12 @@ const metadata = {
       {
         src: '~/assets/images/brands/LogoSmall.png',
         alt: 'Relevant Study',
-        href: 'https://relevantstudy.com',
+      //  href: 'https://relevantstudy.com',
       },
       {
         src: '~/assets/images/brands/LogoSmall.png',
         alt: 'Brand 2',
-        href: 'https://example.com',
+      //  href: 'https://example.com',
       },
       // add as many as needed
     ]}
