--- a/src/pages/hackathons/mofa-voice.astro
+++ b/src/pages/hackathons/mofa-voice.astro
@@ -10,15 +10,13 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-  <!-- Hero2 Widget ******************* -->
-
   <Hero2
     tagline="A GOSIM Super Agent Hacakthon"
     title="MoFA Voice: Building Conversational AI"
     subtitle="with fastest TTS engine, and most composable Agent Framework"
     actions={[
       { variant: 'primary', text: 'Call to Action', href: '#', icon: 'tabler:square-rounded-arrow-right' },
-      { text: 'Learn more', href: './mofa-voice-detail' },
+      { text: 'Learn more', href: 'mofa-voice-detail' },
     ]}
     image={{
       src: 'https://images.unsplash.com/photo-1621452773781-0f992fd1f5cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1626&q=80',
