--- a/src/pages/hackathons/mofa-voice.astro
+++ b/src/pages/hackathons/mofa-voice.astro
@@ -12,7 +12,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <Hero2
     tagline="A GOSIM Super Agent Hacakthon"
-    title="MoFA Voice: Building Conversational AI"
+    title="MoFA Voice: "
     subtitle="with fastest TTS engine, and most composable Agent Framework"
     actions={[
       { variant: 'primary', text: 'Call to Action', href: '#', icon: 'tabler:square-rounded-arrow-right' },
