--- a/src/pages/hackathons/mofa-voice-detail.astro
+++ b/src/pages/hackathons/mofa-voice-detail.astro
@@ -75,7 +75,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80',
+      src: '~/assets/images/brain.png',
       alt: 'Prize & Resources',
     }}
   />
@@ -128,7 +128,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1616198814651-e71f960c3180?ixlib=rb-4.0.3&auto=format&fit=crop&w=987&q=80',
+      src: '~/assets/images/boy-girl-programming.png',
       alt: 'Hackathon Timeline',
     }}
   />
@@ -226,7 +226,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: '~/assets/images/brain-image.png',
+      src: '~/assets/images/busy-with-hackathon.png',
       alt: 'Project Submission',
     }}
   >
