--- a/src/pages/hackathons/mofa-voice-detail.astro
+++ b/src/pages/hackathons/mofa-voice-detail.astro
@@ -75,7 +75,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: '~/assets/images/brain.png',
+      src: '~/assets/images/two-programmers.png',
       alt: 'Prize & Resources',
     }}
   />
@@ -161,7 +161,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1600132806370-bf17e65e942f?ixlib=rb-4.0.3&auto=format&fit=crop&w=2194&q=80',
+      src: '~/assets/images/girls-programming.png',
       alt: 'Hackathon Events',
     }}
   >
