--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -206,39 +206,28 @@ const metadata = {
     items={[
       {
         title: 'MoFA Framework',
-        description: "Ever tried driving without GPS? Boom! That's why websites need headers for direction.",
+        description: "Everything Agent",
         icon: 'flat-color-icons:template',
       },
       {
         title: 'MoFA Search',
         description:
-          "Picture a superhero landing – epic, right? That's the job of a Hero section, making grand entrances!",
+          "AI Metasearh, and beyond",
         icon: 'flat-color-icons:gallery',
       },
       {
         title: 'MoFA Voice',
         description:
-          'Where websites strut their stuff and show off superpowers. No holding back on the bragging rights here!',
+          'Toward Conversational AI, making AI Renewable!',
         icon: 'flat-color-icons:approval',
       },
       {
-        title: 'MoFA ORA',
+        title: 'MoFA Red Alert',
         description:
-          "Dive into the meat and potatoes of a site; without it, you'd just be window shopping. Content is king.",
+          "You Command, AI Conquers",
         icon: 'flat-color-icons:document',
       },
-      {
-        title: 'XLang',
-        description:
-          'That enthusiastic friend who\'s always urging, "Do it! Do it!"? Yeah, that\'s this button nudging you towards adventure.',
-        icon: 'flat-color-icons:advertising',
-      },
-      {
-        title: 'CantorAI',
-        description: 'Behold the dessert menu of the website world. Tempting choices await, can you resist?',
-        icon: 'flat-color-icons:currency-exchange',
-      },
-    ]}
+     }
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
