--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -22,15 +22,52 @@ const metadata = {
     subtitle="穿透信息盲区，重新定义搜索"
     actions={[{ variant: 'primary', target: '_blank', text: 'Register Now', href: 'https://opencamp.com/register' }]}
     image={{
-      src: '~/assets/images/conversational-ai.png',
-      alt: 'MoFA Voice Hackathon Hero Image',
+      src: '~/assets/images/mofa-search-hackathon.png',
+      alt: 'MoFA Search Hackathon developer Image',
     }}
   />
+  <!-- Content Widget **************** -->
+
+  <Content
+    isReversed
+    tagline="MoFA Search"
+    title="穿透盲区，搜索重定义"
+    items={[
+      {
+        title: '大风起兮云飞扬',
+        description:
+          '在这个技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统的搜索引擎巨头如Google、Perplexity和OpenAI的SearchGPT，虽然依托强大的爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战。',
+      },
+      {
+        title: '传统搜索的局限',
+        description:
+          '当前搜索领域存在三大核心痛点：首先，以广告为主导的商业模式严重制约了内容生态的健康发展，内容提供者的价值得不到充分尊重，这直接导致了优质内容的稀缺；其次，现有搜索引擎仅能触及互联网表层4%的内容，而占据90%以上的深层网络资源仍处于’搜索盲区‘；最后，无论是内容提供者还是消费者，都面临着日益复杂的搜索环境和使用门槛。',
+      },
+      {
+        title: '重新定义搜索，超越搜索',
+        description:
+          '然而，AI智能体技术的突破为我们带来了革命性的解决方案。通过部署先进的AI智能体系统，我们能够构建一个真正智能化、人性化的搜索生态。这些智能体不仅能够代表内容消费者精准获取所需信息，更能协助内容提供者优化内容呈现，实现双向赋能。这种创新模式将彻底改变搜索领域的游戏规则，为内容生态注入新的活力，开启搜索技术的新纪元。',
+      },
+    ]}
+    image={{
+      src: 'https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
+      alt: 'Colorful Image',
+    }}
+  >
+    <Fragment slot="content">
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Building on modern foundations</h3>
+      Gain a competitive advantage by incorporating industry leading practices
+    </Fragment>
+
+    <Fragment slot="bg">
+      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+    </Fragment>
+  </Content>
 
   <!-- Features2 Widget ************** -->
   <Features2
-    title = "Key Technologies at the Hackathon"
-    subtitle = "Explore the powerful AI-driven tools and frameworks that will fuel your innovations."
+    title = "构建Mofa搜索超级智能体"
+    subtitle = "组合AI"
     columns={2}
     items={[
       {
