--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -22,7 +22,7 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="A GOSIM Super Agent Hackathon"
+    tagline="GOSIM超级智能体大赛系列"
     actions={[
       {
         variant: 'primary',
@@ -35,13 +35,13 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-       MoFA Search 
+       MoFA Search
     </Fragment>
 
     <Fragment slot="subtitle">
-        Building innovative <span class="text-accent dark:text-white highlight">Search and Deep Research Engines </span> with Composition AI </Fragment>
+        邀请您施展魔法，用大模型和智能体一起来构建 <span class="text-accent dark:text-white highlight">搜索引擎和深度研究引擎 </span>, 一起来穿透盲区，重新定义搜索。</Fragment>
 
-    <Fragment slot="image">
+    <Fragment slot="image"  title="2024年 GOSIM超级智能体黑客松大赛宣传视频">
       <YouTube id="ZuN29OO1mb0" title="GOSIM Super Agent Hackathon" />
       <style is:inline>
         lite-youtube {
@@ -51,21 +51,6 @@ const metadata = {
       </style>
     </Fragment>
   </Hero>
-
-  <!-- Features2 Widget ************** -->
-
-  <Features2
-    title="穿透盲区，搜索重定义"
-    subtitle="在这个技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统的搜索引擎巨头如Google、Perplexity和OpenAI的SearchGPT，虽然依托强大的爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战。
-
-    当前搜索领域存在三大核心痛点：首先，以广告为主导的商业模式严重制约了内容生态的健康发展，内容提供者的价值得不到充分尊重，这直接导致了优质内容的稀缺；其次，现有搜索引擎仅能触及互联网表层4%的内容，而占据90%以上的深层网络资源仍处于’搜索盲区‘；最后，无论是内容提供者还是消费者，都面临着日益复杂的搜索环境和使用门槛。
-
-    然而，AI智能体技术的突破为我们带来了革命性的解决方案。通过部署先进的AI智能体系统，我们能够构建一个真正智能化、人性化的搜索生态。这些智能体不仅能够代表内容消费者精准获取所需信息，更能协助内容提供者优化内容呈现，实现双向赋能。这种创新模式将彻底改变搜索领域的游戏规则，为内容生态注入新的活力，开启搜索技术的新纪元。">
-    
-    <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
-    </Fragment>
-  </Features2>
 
 
   <!-- Brands Widget ****************** -->
