--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -36,7 +36,7 @@ const metadata = {
       {
         title: '大风起兮云飞扬',
         description:
-          '在这个技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统的搜索引擎巨头如Google、Perplexity和OpenAI的SearchGPT，虽然依托强大的爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战。',
+          '在这个技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统和搜索引擎巨头如Google、依托强大的互联网内容爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战；新贵搜索引擎如Perplexity和OpenAI的SearchGPT，也同样向网页不断发出繁忙的爬虫。',
       },
       {
         title: '传统搜索的局限',
@@ -55,8 +55,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Building on modern foundations</h3>
-      Gain a competitive advantage by incorporating industry leading practices
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">MoFA Search的意义</h3> 
     </Fragment>
 
     <Fragment slot="bg">
@@ -66,8 +65,8 @@ const metadata = {
 
   <!-- Features2 Widget ************** -->
   <Features2
-    title = "构建Mofa搜索超级智能体"
-    subtitle = "组合AI"
+    title = "构建MoFA搜索超级智能体"
+    subtitle = ""
     columns={2}
     items={[
       {
