--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -30,8 +30,8 @@ const metadata = {
 
   <Content
     isReversed
-    tagline="MoFA Search"
-    title="穿透盲区，搜索重定义"
+    tagline="穿透盲区，重新定义搜索，超越传统搜索"
+    title="MoFA搜索：搜索的机遇和意义"
     items={[
       {
         title: '大风起兮云飞扬',
