--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -84,17 +84,17 @@ const metadata = {
     items={[
       {
         title: '一等奖',
-        description: 'Win cash prizes, AI research credits, and exclusive mentorship opportunities with top AI experts.',
+        description: '(1个队伍)奖金9000元整',
         icon: 'tabler:trophy',
       },
       {
         title: '二等奖',
-        description: 'Access exclusive workshops, tutorials, and API documentation to accelerate your development.',
+        description: '(3个队伍)每个队伍奖金3000元整',
         icon: 'tabler:book',
       },
       {
         title: '优胜奖',
-        description: 'Connect with AI researchers, developers, and industry leaders.',
+        description: '三等奖:(8个队伍)每个队伍奖金1400元整',
         icon: 'tabler:users',
       },
     ]}
@@ -116,17 +116,17 @@ const metadata = {
         icon: 'tabler:calendar',
       },
       {
-        title: '20:00 2025.03.14',
+        title: '2025.03.14 20:00',
         description: '赛题公布',
         icon: 'tabler:presentation',
       },
       {
-        title: '20:00 ~ 21:30 2025.03.14',
+        title: '2025.03.14 20:00 ~ 21:30',
         description: '线上讲座',
         icon: 'tabler:code',
       },
       {
-        title: '23:59:59 2025.03.14',
+        title: '2025.03.14 23:59:59',
         description: '报名截止',
         icon: 'tabler:users',
       },
@@ -136,7 +136,7 @@ const metadata = {
         icon: 'tabler:presentation',
       },
       {
-        title: '23:59:59 2025.03.30',
+        title: '2025.03.30 23:59:59',
         description: '比赛结束',
         icon: 'tabler:presentation',
       },
@@ -174,7 +174,12 @@ const metadata = {
           '以多个案例展示如何开发MoFA智能体',
       },      
       {
-        title: '3月15日 20:00 Office Hour',
+        title: '3月15日 20:00 魔法学院 - Moly & Dora介绍',
+        description:
+          'Moly为MoFA提供了用户界面，Dora为MoFA提供了分布式计算能力',
+      },
+      {
+        title: '3月15日 21:00 Office Hour',
         description:
           'MoFA核心团队线上答疑，回答黑客松比赛里出现的问题',
       },
