--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -18,16 +18,16 @@ const metadata = {
 
   <Content
     isReversed
-    tagline="穿透盲区，重新定义搜索，超越传统搜索"
+    tagline=""
     title="MoFA搜索：搜索的机遇和意义"
     items={[
       {
         title: '大风起兮云飞扬',
         description:
-          '在这个技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统搜索引擎巨头如Google、依托强大的互联网内容爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战；新贵搜索引擎如Perplexity和OpenAI的SearchGPT，也同样向网页不断发出繁忙的爬虫。',
+          '时代变革：在这个技术革命风起云涌的时代，我们正站在一个重新定义搜索范式的历史性节点。传统搜索引擎巨头如Google、依托强大的互联网内容爬取技术建立了庞大的搜索帝国，但其固有的商业模式和技术架构正面临前所未有的挑战；新贵搜索引擎如Perplexity和OpenAI的SearchGPT，也同样向网页不断发出繁忙的爬虫。',
       },
       {
-        title: '威加搜索兮现天光',
+        title: 'Web搜索挖宝藏',
         description:
           '当前搜索领域存在三大核心痛点：首先，以广告为主导的商业模式严重制约了内容生态的健康发展，内容提供者的价值得不到充分尊重，这直接导致了优质内容的稀缺；其次，现有搜索引擎仅能触及互联网表层4%的内容，而占据90%以上的深层网络资源仍处于’搜索盲区‘；最后，无论是内容提供者还是消费者，都面临着日益复杂的搜索环境和使用门槛。',
       },
@@ -53,29 +53,29 @@ const metadata = {
 
   <!-- Features2 Widget ************** -->
   <Features2
-    title = "构建MoFA搜索超级智能体"
-    subtitle = ""
+    title = "您可以构建"
+    subtitle = "施展魔法，构建搜索超级智能体"
     columns={2}
     items={[
       {
-        title: ' Connector Agents',
-        description: 'Leverage cutting-edge voice AI models to create intelligent and interactive voice agents.',
-        icon: 'tabler:microphone',
+        title: ' Connector 智能体',
+        description: '不同的网站访问方式各异，Connector Agent使访问网站更加个性化、更加丰富。',
+        icon: 'tabler:plug-connected',
       },
       {
-        title: ' Extractor Agents',
-        description: 'Build modular and scalable AI agents with the MoFA Agent Framework.',
-        icon: 'tabler:brain',
+        title: ' Extractor 智能体',
+        description: '从搜索返回的内容抽取有用的内容，过滤掉无用的内容（比如广告信息）',
+        icon: 'tabler:filter',
       },
       {
-        title: 'Query Dispatching Agents',
-        description: 'Process and analyze speech data in real-time for enhanced conversational AI.',
-        icon: 'tabler:brain',
+        title: '查询生成和分发智能体',
+        description: '将用户的输入转化成有效的查询，发给不同的网站.',
+        icon: 'tabler:affiliate',
       },
       {
-        title: 'Query Understanding Agents',
-        description: 'Develop AI-driven assistants that engage users in natural and dynamic conversations.',
-        icon: 'tabler:message-chatbot',
+        title: 'Search Planning 智能体',
+        description: '为用户的查询问题规划整个搜索方案',
+        icon: 'tabler:checklist',
       },
     ]}
   />
@@ -90,12 +90,12 @@ const metadata = {
       {
         title: '二等奖',
         description: '(3个队伍)每个队伍奖金3000元整',
-        icon: 'tabler:book',
+        icon: 'tabler:laurel-wreath-2',
       },
       {
         title: '优胜奖',
-        description: '三等奖:(8个队伍)每个队伍奖金1400元整',
-        icon: 'tabler:users',
+        description: '(8个队伍)每个队伍奖金1400元整',
+        icon: 'tabler:laurel-wreath-3',
       },
     ]}
     image={{
