--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -58,6 +58,16 @@ const metadata = {
     columns={2}
     items={[
       {
+        title: '查询生成和分发智能体',
+        description: '将用户的输入转化成有效的查询，发给不同的网站.',
+        icon: 'tabler:affiliate',
+      },
+      {
+        title: 'Search Planning 智能体',
+        description: '为用户的查询问题规划整个搜索方案',
+        icon: 'tabler:checklist',
+      },
+      {
         title: ' Connector 智能体',
         description: '不同的网站访问方式各异，Connector Agent使访问网站更加个性化、更加丰富。',
         icon: 'tabler:plug-connected',
@@ -68,14 +78,9 @@ const metadata = {
         icon: 'tabler:filter',
       },
       {
-        title: '查询生成和分发智能体',
-        description: '将用户的输入转化成有效的查询，发给不同的网站.',
-        icon: 'tabler:affiliate',
-      },
-      {
-        title: 'Search Planning 智能体',
-        description: '为用户的查询问题规划整个搜索方案',
-        icon: 'tabler:checklist',
+        title: ' Analyzer 智能体',
+        description: '将从多个数据源获得的信息进行分析整合的智能体',
+        icon: 'tabler:align-left',
       },
     ]}
   />
