--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -39,7 +39,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-        用大模型和智能体施展您的魔法，一起来构建 <span class="text-accent dark:text-white highlight">搜索引擎和深度研究引擎 </span>, 一起来穿透盲区，重新定义搜索。</Fragment>
+        用大模型和智能体施展您的魔法，一起来构建 <span class="text-accent dark:text-white highlight">AI时代的搜索引擎 </span>, 一起来：穿透盲区，超越传统，重新定义搜索。</Fragment>
 
     <Fragment slot="image"  title="2024年 GOSIM超级智能体黑客松大赛宣传视频">
       <YouTube id="ZuN29OO1mb0" title="GOSIM Super Agent Hackathon" />
