--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -82,6 +82,11 @@ const metadata = {
         description: '将从多个数据源获得的信息进行分析整合的智能体',
         icon: 'tabler:align-left',
       },
+      {
+        title: ' Computer Use 智能体',
+        description: '帮助用户操作电脑/浏览器网站，发送搜索查询，获得搜索结果的工具型智能体',
+        icon: 'tabler:user-cog',
+      },
     ]}
   />
 <Content
