--- a/src/pages/hackathons/mofa-search-detail.astro
+++ b/src/pages/hackathons/mofa-search-detail.astro
@@ -18,8 +18,8 @@ const metadata = {
 
   <Content
     isReversed
-    tagline=""
-    title="MoFA搜索：搜索的机遇和意义"
+    tagline="MoFA搜索黑客大赛
+    title="：探索AI搜索的机遇和意义"
     items={[
       {
         title: '大风起兮云飞扬',
