--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -42,7 +42,7 @@ const metadata = {
         用大模型和智能体施展您的魔法，一起来构建 <span class="text-accent dark:text-white highlight">AI时代的搜索引擎 </span>, 一起来：穿透盲区，超越传统，重新定义搜索。</Fragment>
 
     <Fragment slot="content">
-      全球开源创新汇（GOSIM）是一个面向草根开发者的国际开源社区，举办一系列包括MoFA超级智能体黑客松大赛在内的各种活动。（以下是2024年首届草鸡智能体大赛的宣传视频） 
+      全球开源创新汇（GOSIM）是一个面向草根开发者的国际开源社区，举办一系列包括MoFA超级智能体黑客松大赛在内的各种活动。（以下是2024年首届超级智能体大赛的宣传视频） 
     </Fragment>
    
     <Fragment slot="image">
