--- a/src/pages/hackathons/mofa-search.astro
+++ b/src/pages/hackathons/mofa-search.astro
@@ -28,7 +28,7 @@ const metadata = {
         variant: 'primary',
         target: '_blank',
         text: '立即报名',
-        href: 'https://github.com/onwidget/astrowind',
+        href: 'https://opencamp.cn/gosim/camp/MoFA2025',
         icon: 'tabler:download',
       },
       { text: '大赛详情', href: 'https://relevantstudy.github.io/hackathons/mofa-search-detail/' },
